--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/Header.css" />
-    <link rel="stylesheet" href="styles/MainBody-Home.css" />
-    <link rel="stylesheet" href="styles/Footer.css" />
-    <link rel="stylesheet" href="styles/General.css" />
+    <link rel="stylesheet" href="Styles/Header.css" />
+    <link rel="stylesheet" href="Styles/MainBody-Home.css" />
+    <link rel="stylesheet" href="Styles/Footer.css" />
+    <link rel="stylesheet" href="Styles/General.css" />
   </head>
   <body>
     <header class="header">
