--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
             <div>
               <a style="color: white" href="AboutUs.html">About Us</a>
             </div>
-            <div><a style="color: white" href="QSATeam.html">QSA Team</a></div>
+            <div><a style="color: white" href="QsaTeam.html">QSA Team</a></div>
             <div><a style="color: white" href="Events.html">Events</a></div>
             <div>
               <a style="color: white" href="QSAArtSpace.html">QSA ArtSpace</a>
