--- a/QSAArtSpace.html
+++ b/QSAArtSpace.html
@@ -10,10 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/Header.css" />
-    <link rel="stylesheet" href="styles/MainBody-QSAArtSpace.css" />
-    <link rel="stylesheet" href="styles/Footer.css" />
-    <link rel="stylesheet" href="styles/General.css" />
+    <link rel="stylesheet" href="Styles/Header.css" />
+    <link rel="stylesheet" href="Styles/MainBody-QSAArtSpace.css" />
+    <link rel="stylesheet" href="Styles/Footer.css" />
+    <link rel="stylesheet" href="Styles/General.css" />
   </head>
   <body>
     <header class="header">
@@ -36,7 +36,7 @@
               <a style="color: white" href="AboutUs.html">About Us</a>
             </div>
             <div>
-              <a style="color: white" href="QSATeam.html">QSA Team</a>
+              <a style="color: white" href="QsaTeam.html">QSA Team</a>
             </div>
             <div>
               <a style="color: white" href="Events.html">Events</a>
