--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,10 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/Header.css" />
-    <link rel="stylesheet" href="styles/MainBody-AboutUs.css" />
-    <link rel="stylesheet" href="styles/Footer.css" />
-    <link rel="stylesheet" href="styles/General.css" />
+    <link rel="stylesheet" href="Styles/Header.css" />
+    <link rel="stylesheet" href="Styles/MainBody-AboutUs.css" />
+    <link rel="stylesheet" href="Styles/Footer.css" />
+    <link rel="stylesheet" href="Styles/General.css" />
   </head>
   <body>
     <header class="header">
@@ -37,7 +37,7 @@
                 >About Us</a
               >
             </div>
-            <div><a style="color: white" href="QSATeam.html">QSA Team</a></div>
+            <div><a style="color: white" href="QsaTeam.html">QSA Team</a></div>
             <div><a style="color: white" href="Events.html">Events</a></div>
             <div>
               <a style="color: white" href="QSAArtSpace.html">QSA ArtSpace</a>
