--- a/QsaTeam.html
+++ b/QsaTeam.html
@@ -10,10 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/Header.css" />
-    <link rel="stylesheet" href="styles/MainBody-QSATeam.css" />
-    <link rel="stylesheet" href="styles/Footer.css" />
-    <link rel="stylesheet" href="styles/General.css" />
+    <link rel="stylesheet" href="Styles/Header.css" />
+    <link rel="stylesheet" href="Styles/MainBody-QSATeam.css" />
+    <link rel="stylesheet" href="Styles/Footer.css" />
+    <link rel="stylesheet" href="Styles/General.css" />
   </head>
   <body>
     <header class="header">
@@ -36,7 +36,7 @@
               <a style="color: white" href="AboutUs.html">About Us</a>
             </div>
             <div>
-              <a style="color: black; font-size: 24px" href="QSATeam.html"
+              <a style="color: black; font-size: 24px" href="QsaTeam.html"
                 >QSA Team</a
               >
             </div>
