--- a/ContactUs.html
+++ b/ContactUs.html
@@ -22,15 +22,15 @@
         <div class="Header-Content">
           <div class="Left-Section">
             <div class="Website-Logo">
-              <a href="Index.html"><img src="Icons/QSA_Logo.jpeg" alt="" /></a>
+              <a href="index.html"><img src="Icons/QSA_Logo.jpeg" alt="" /></a>
             </div>
             <div class="Website-Name">
-              <a href="Index.html">Queer South Asians</a>
+              <a href="index.html">Queer South Asians</a>
             </div>
           </div>
           <div class="Right-Section">
             <div>
-              <a style="color: white" href="Index.html">Home</a>
+              <a style="color: white" href="index.html">Home</a>
             </div>
             <div>
               <a style="color: white" href="AboutUs.html">About Us</a>
@@ -137,7 +137,7 @@
       <div class="Footer-Content">
         <div class="Footer-Left">
           <div style="font-size: 35px; font-weight: 700; padding-bottom: 15px">
-            <a style="color: black" href="Index.html">Queer South Asians</a>
+            <a style="color: black" href="index.html">Queer South Asians</a>
           </div>
           <div style="font-size: 18px; padding-bottom: 15px">
             Queer South Asians (QSA) is a trans-led and volunteer-run community
