--- a/Index.html
+++ b/Index.html
@@ -22,15 +22,15 @@
         <div class="Header-Content">
           <div class="Left-Section">
             <div class="Website-Logo">
-              <a href="Index.html"><img src="Icons/QSA_Logo.jpeg" alt="" /></a>
+              <a href="index.html"><img src="Icons/QSA_Logo.jpeg" alt="" /></a>
             </div>
             <div class="Website-Name">
-              <a href="Index.html">Queer South Asians</a>
+              <a href="index.html">Queer South Asians</a>
             </div>
           </div>
           <div class="Right-Section">
             <div>
-              <a style="color: black; font-size: 24px" href="Index.html"
+              <a style="color: black; font-size: 24px" href="index.html"
                 >Home</a
               >
             </div>
@@ -269,7 +269,7 @@
               padding-left: 5px;
             "
           >
-            <a style="color: black" href="Index.html">Queer South Asians</a>
+            <a style="color: black" href="index.html">Queer South Asians</a>
           </div>
           <div
             class="Footer-Description"
